--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregando titulo HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1><bold>HOLA MUNDO</bold></h1>
 </body>
 </html>
