--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregando titulo HTML</title>
+    <title>Efecto de Texto Estilizado 'HOLA MUNDO'</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><bold>HOLA MUNDO</bold></h1>
+    <h1>HOLA MUNDO</h1>
 </body>
 </html>
